--- a/css/pages/gallery.css
+++ b/css/pages/gallery.css
@@ -1,12 +1,3 @@
-
-.page-wrapper-small{
-  text-align: center;
-}
-
-.diary-gallery-slide img{
-  width: 100%;
-}
-
 .diary-slider-container{
   width: 100%;
   overflow: hidden;
@@ -20,36 +11,15 @@
   /*transition: 0.3s all ease-out;*/
 }
 
-.expanded-background {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  background-color: rgb(115, 68, 41, 0.9);
-  z-index: 1;
-  top: 0;
-  left: 0;
-  cursor: pointer;
-}
-
-.expanded-slider{
-  z-index: 10;
-  max-width: 85vw;
-  max-height: 85vh;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  position: fixed;
-  width: 100%;
-}
-
 .diary-previous-arrow,
 .diary-next-arrow {
   position: absolute;
   height: 100%;
-  width: 5%;
+  width: 8%;
   top: 0;
   z-index: 1;
   cursor: pointer;
+  background: rgba(300,300,300, 0.6);
 }
 
 .diary-next-arrow {
@@ -69,19 +39,36 @@
   width: 3.5%;
   height: 0px;
   top: 55%;
-  border-top: 35px solid transparent;
-  border-bottom: 35px solid transparent;
+  border-top: 25px solid transparent;
+  border-bottom: 25px solid transparent;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   top: 50%;
 }
 
 .diary-previous-arrow::after{
-  left: 5%;
-  border-right: 25px solid rgb(0, 0, 0, 0.4);
+  left: 15%;
+  border-right: 15px solid rgb(0, 0, 0, 0.7);
 }
 
 .diary-next-arrow::after{
-  right: 5%;
-  border-left: 25px solid rgb(0, 0, 0, 0.4);
+  right: 15%;
+  border-left: 15px solid rgb(0, 0, 0, 0.7);
+}
+
+@media only screen and (min-width: 720px) {
+  .diary-previous-arrow,
+  .diary-next-arrow {
+    width: 5%;
+  }
+
+  .diary-previous-arrow::after{
+    left: 20%;
+    border-right: 25px solid rgb(0, 0, 0, 0.7);
+  }
+  
+  .diary-next-arrow::after{
+    right: 20%;
+    border-left: 25px solid rgb(0, 0, 0, 0.7);
+  }
 }
