--- a/css/styles.css
+++ b/css/styles.css
@@ -753,7 +753,7 @@ border-radius: 5px;
 }
 
 .error{
-  color: red;
+  color: rgb(212, 0, 0);
 }
 
 .success{
